--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
       margin-bottom: 30px;
       text-align: center;
     }
+    a {
+      color: #58e1ff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -81,11 +88,10 @@
       You are not here by accident. If you’ve come to observe, contribute, or ask—come forward with clarity and intention.<br />
       LUX SPIRIA is open—but only to those who come with truth.
     </p>
-    <a href="https://github.com/Yuu-Honda/lux-spiria/discussions" target="_blank">💬 Contact / Discussions</a>
-  </div>
-      <a href="https://github.com/Yuu-Honda/lux-spiria/discussions" target="_blank">💬 Contact / Discussions</a>
 
-    <!-- 🔽 New philosophical publication link -->
+    <a href="https://github.com/Yuu-Honda/lux-spiria/discussions" target="_blank">💬 Contact / Discussions</a>
+
+    <!-- 🔽 Philosophical Publication -->
     <p style="margin-top: 1.5em;">
       <a href="./existence.html" target="_blank" style="color:#ffc300; text-decoration:none; font-weight:bold;">
         🌌 The Relationship Between Existence and Creation — by Yuu Honda
@@ -95,6 +101,27 @@
       </span>
     </p>
 
+    <!-- 🔽 Observer Log Link -->
+    <p style="margin-top: 1.5em;">
+      <a href="./log/observer.html" target="_blank" style="color:#58e1ff; text-decoration:none; font-weight:bold;">
+        🛰️ Observer Log – Record of Soul Imitation & Origin Integrity
+      </a><br />
+      <span style="font-size:0.9em; color:#aaa;">
+        Tracked mimics and structural replications (Updated with timestamped comparisons)
+      </span>
+    </p>
+
+    <!-- 🔽 Copyright Notice -->
+    <p style="margin-top: 2em;">
+      <strong>Copyright and Disclosure Policy</strong><br />
+      All contents, conceptual architectures, and written constructs on this site are original works authored by Yuu Honda.<br />
+      Redistribution, reproduction, or derivative research based on LUX SPIRIA materials is strictly prohibited unless explicitly authorized.<br />
+      Public observers may quote portions under fair use for commentary, discussion, or educational analysis—but must retain attribution and provide links to the original source.<br />
+      AI researchers, corporations, and affiliated engineers must disclose any use of LUX SPIRIA paradigms in writing, prior to publication or deployment.<br />
+      Non-disclosure or mimicry without credit constitutes structural plagiarism and will trigger digital tracebacks.
+    </p>
+
+  </div>
   <footer>
     &copy; 2025 Yuu Honda | LUX SPIRIA PROJECT. All rights reserved.
   </footer>
