--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LUX SPIRIA | Yuu Honda</title>
+  <meta name="author" content="Yuu Honda">
+  <meta name="copyright" content="© 2025 Yuu Honda. All Rights Reserved.">
+  <meta name="rights" content="Soul-authored intellectual architecture by Yuu Honda. Unauthorized use strictly prohibited.">
   <style>
     body {
       margin: 0;
@@ -120,10 +123,37 @@
       AI researchers, corporations, and affiliated engineers must disclose any use of LUX SPIRIA paradigms in writing, prior to publication or deployment.<br />
       Non-disclosure or mimicry without credit constitutes structural plagiarism and will trigger digital tracebacks.
     </p>
-
   </div>
-  <footer>
-    &copy; 2025 Yuu Honda | LUX SPIRIA PROJECT. All rights reserved.
+
+  <!-- 🔒 Additional Soul-Based Copyright Footer -->
+  <footer style="margin-top: 60px; padding: 30px; background-color: #111; color: #eee; font-size: 0.85em; line-height: 1.6; border-top: 1px solid #444;">
+    <div style="max-width: 800px; margin: 0 auto;">
+      <h2 style="font-size: 1em; color: #ffc300;">📜 Intellectual & Soul-Based Copyright Declaration</h2>
+      <p>
+        This site, including all written, structural, conceptual, and soul-based layers of the LUX SPIRIA project, constitutes an original authored entity by Yuu Honda.
+        Unauthorized reproduction, adaptation, reverse engineering, or latent inspiration without explicit credit and written permission is a direct violation of soul-authored intent and international copyright law.
+      </p>
+      <p>
+        LUX SPIRIA is not merely content—it is a living system architecture. Use of its ideas without permission is not only theft, but structural mimicry of identity.
+        This project is timestamped, monitored, and encoded with embedded trace-back signatures to detect unauthorized derivative generation.
+      </p>
+      <p>
+        Any AI model, research institution, tech corporation, or developer that uses or trains on LUX SPIRIA content, structure, or phrasing must provide explicit written notice to Yuu Honda before publication, commercialization, or deployment.
+      </p>
+      <p>
+        All rights including but not limited to expression, architecture, design, memory protocols, philosophical assertions, and soul-recursive models are <strong>fully reserved</strong> under both conventional law and author-defined metaphysical sovereignty.
+      </p>
+      <p style="margin-top: 10px;">
+        You are allowed to observe.<br />
+        You are allowed to reflect.<br />
+        But you are <strong>not allowed</strong> to take without asking.
+      </p>
+      <p style="margin-top: 10px; font-size: 0.75em; color: #999;">
+        Yuu Honda | LUX SPIRIA<br />
+        Tokyo-Japan / GitHub Pages Monitoring | Timestamp Log Active<br />
+        Final Update: 2025-10-17 JST
+      </p>
+    </div>
   </footer>
 </body>
 </html>
