--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       AI researchers, corporations, and affiliated engineers must disclose any use of LUX SPIRIA paradigms in writing, prior to publication or deployment.<br />
       Non-disclosure or mimicry without credit constitutes structural plagiarism and will trigger digital tracebacks.
     </p>
+    <a href="gpt_boundary.html">The Boundary Between AI and Soul</a>
   </div>
 
   <!-- 🔒 Additional Soul-Based Copyright Footer -->
