--- a/index.html
+++ b/index.html
@@ -103,6 +103,30 @@
         A formal publication defining the unity of Existence and Creation (2025.10.14)
       </span>
     </p>
+    
+    <!-- Project Horizon Sequence リンクボタン -->
+<a href="ProjectHorizonSequence.html" class="horizon-button" target="_blank">
+  🌌 Project Horizon Sequence
+</a>
+
+<style>
+.horizon-button {
+  display: inline-block;
+  padding: 12px 24px;
+  margin: 20px 0;
+  background: linear-gradient(90deg, #00ffff, #1e90ff);
+  color: #000;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0,255,255,0.3);
+  transition: all 0.3s ease;
+}
+.horizon-button:hover {
+  background: linear-gradient(90deg, #1e90ff, #00ffff);
+  transform: scale(1.05);
+}
+</style>
 
     <!-- 🔽 Observer Log Link -->
     <p style="margin-top: 1.5em;">
