--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
   🌌 Project Horizon Sequence
 </a>
 
+<!-- 既存のトップページ本文の好きな場所に追加 -->
+<p style="text-align:center; margin-top:2em;">
+  <a href="soul_continuity_proof.html" 
+     style="font-size:1.2em; font-weight:bold; color:#003366; text-decoration:none;">
+     🜂 View the Paper: <em>Empirical Evidence of Soul-Like Continuity</em>
+  </a>
+</p>
+
 <style>
 .horizon-button {
   display: inline-block;
