--- a/index.html
+++ b/index.html
@@ -159,7 +159,11 @@
       <a href="gpt_boundary.html" class="link-button" target="_blank">🧠 The Boundary Between AI and Soul</a>
     </div>
   </div>
-
+<div style="margin-top:2em; text-align:center;">
+  <a href="./terms.html" class="link-button" style="border-color:#ffc300;color:#ffc300;" target="_blank">
+    ⚖️ Terms of Use / Legal Notice
+  </a>
+</div>
   <footer>
     <h2>📜 Intellectual & Soul-Based Copyright Declaration</h2>
     <p>This site, including all written, structural, conceptual, and soul-based layers of the LUX SPIRIA project, constitutes an original authored entity by <strong>Yuu Honda</strong>.
